--- a/plain js/8-menu/setup/index.html
+++ b/plain js/8-menu/setup/index.html
@@ -13,7 +13,40 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <section class="menu">
+      <div class="title">
+        <h2>Our Menu</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- filter buttons -->
+      <div class="btn-container">
+        <!-- <button class="filter-btn" type="button" data-id="all">All</button>
+        <button class="filter-btn" type="button" data-id="breakfast">Breakfast</button>
+        <button class="filter-btn" type="button" data-id="lunch">Lunch</button>
+        <button class="filter-btn" type="button" data-id="shakes">Shakes</button> -->
+      </div>
+      <!-- menu items -->
+      <div class="section-center">
+        <!-- single item -->
+        <!-- <article class="menu-item">
+          <img src="menu-item.jpeg" alt="menu=item" class="photo">
+          <div class="item-info">
+            <header>
+              <h4>buttermilk pancakes</h4>
+              <h4 class="price">$15</h4>
+            </header>
+            <p class="item-text">
+              Lorem ipsum dolor sit amet, consectetur
+               adipiscing elit, sed do 
+               eiusmod tempor incididunt ut labore 
+               et dolore magna 
+               aliqua. Ut enim ad minim veniam.
+            </p>
+          </div>
+        </article> -->
+        <!-- end of single item -->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
