--- a/plain js/12-countdown-timer/setup/index.html
+++ b/plain js/12-countdown-timer/setup/index.html
@@ -9,7 +9,58 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <!-- image -->
+    <section class="section-center">
+      <article class="gift-img">
+        <img src="gift.jpeg" alt="gift picture">
+      </article>
+      <!-- info -->
+      <article class="gift-info">
+        <h3>old iphone giveaway</h3>
+        <h4 class="giveaway">
+          giveaway ends on Sunday, July 20th 2020, 8:00am
+        </h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+           Ipsum quo at corrupti atque voluptatibus eaque ab, 
+           consequuntur tempore beatae dolor aliquid et 
+           temporibus nobis quas provident optio laborum, sed harum.
+          </p>
+        <div class="deadline">
+          <!-- days -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="days">34</h4>
+              <span>days</span>
+            </div>
+          </div>
+          <!-- end of item -->
+          <!-- hours -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">34</h4>
+              <span>hours</span>
+            </div>
+          </div>
+          <!-- end of item -->
+          <!-- mins -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="minutes">34</h4>
+              <span>minutes</span>
+            </div>
+          </div>
+          <!-- end of item -->
+          <!-- seconds -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="seconds">34</h4>
+              <span>seconds</span>
+            </div>
+          </div>
+          <!-- end of item -->
+        </div>
+      </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
